--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "es6-promise": "^3.2.1",
     "lodash": "^4.15.0",
     "path": "^0.12.7",
-    "swiper": "^3.3.1"
+    "swiper": "^3.3.1",
+    "ts-modal": "^1.0.3",
+    "velocity-animate": "^1.2.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
