--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "angular": "^1.5.8",
     "angular-local-storage": "^0.2.7",
+    "angular-scroll": "^1.0.0",
     "angular-swiper": "^0.4.0",
     "angular-ui-router": "^0.3.1",
     "axios": "^0.13.1",
